<resources>
    <string name="app_name">Biz Mkononi App Test</string>

    <string name="label_create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account? <b><u>Sign in</u></b></string>
    <string name="resend_verification">Resend Verification SMS? <b><u>Resend</u></b></string>
    <string name="verify_phone">Verify Phone? <b><u>Verify Phone</u></b></string>
    <string name="label_sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="no_an_account">Don\'t have an account yet? <b><u>Sign Up</u></b></string>
    <string name="sign_in_label">Sign In</string>
    <string name="remember_me_label">Remember Me</string>
    <string name="businesses_label">Businesses</string>
    <string name="account_label">Account</string>
    <string name="customer_label">Customer</string>
    <string name="register_label">Register</string>
    <string name="searchview_hint">Search for insights, sale, customers</string>
    <string name="welcome_text">Here is your today\'s overview insights</string>
    <string name="overview_label">Overview</string>
    <string name="sales_insights_label">Sales Insights</string>
    <string name="customer_insights_label">Customer Insights</string>
    <string name="chum_rates_insights_label">Chum Rates Insights</string>
    <string name="revenue_insights_label">Revenue Insights</string>
    <string name="insights_label">Insights</string>
    <string name="sales_label">Sales</string>
    <string name="supplies_label">Supplies</string>
    <string name="finances_label">Finances</string>
    <string name="customers_label">Customers</string>
    <string name="week_days_label">Day of the week</string>
    <string name="selected_date_label">Aug 26, 2021 - December 31, 2021</string>
    <string name="repeat_purchase_label">Repeat Purchase</string>
    <string name="new_users_label">New Users</string>
    <string name="new_user_no">2000</string>
    <string name="purchase_percent">8.5%</string>
    <string name="percent_1_2">1.2%</string>
    <string name="welcome_user_label">Welcome John Doe,</string>
    <string name="rbtn_phone_calls_label">Phone Calls</string>
    <string name="rbtn_gender_visit_buying_label">Gender,Visit Buying</string>
    <string name="toolbar_title">Botique Shop</string>
    <string name="roses_pec_label">Roses</string>
</resources>