<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actionBusinesses"
        android:icon="@drawable/ic_businesses"
        android:title="@string/businesses_label"
        app:cnb_backgroundColor= "@color/purple_500"
        android:enabled="true"
        />
    <item
        android:id="@+id/actionCustomerISights"
        android:icon="@drawable/ic_insights"
        android:title="@string/customer_label"
        app:cnb_backgroundColor= "@color/purple_500"/>
    <item
        android:id="@+id/actionAccount"
        android:icon="@drawable/ic_person"
        android:title="@string/account_label"
        app:cnb_backgroundColor= "@color/purple_500"/>
</menu>